--- a/app/_components/home/Experience/_Experience.module.scss
+++ b/app/_components/home/Experience/_Experience.module.scss
@@ -67,6 +67,10 @@
     text-align: left;
     padding-top: 0;
   }
+  .desc {
+    font-size: 1.45rem;
+    line-height: 1.5;
+  }
 }
 
 @media (max-width: 640px) {
@@ -79,7 +83,7 @@
     line-height: 1.05;
   }
   .desc {
-    font-size: 1.45rem;
+    font-size: 1.4rem;
   }
   .year,
   .loc {
