--- a/app/_components/home/Hero/_Hero.module.scss
+++ b/app/_components/home/Hero/_Hero.module.scss
@@ -294,7 +294,8 @@
     }
   }
   .sub {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
+    line-height: 1.5;
   }
   .statusLine {
     font-size: 1rem;
@@ -376,7 +377,7 @@
     padding-top: 18px;
   }
   .sub {
-    font-size: 1.45rem;
+    font-size: 1.35rem;
     line-height: 1.5;
     max-width: 100%;
   }
