--- a/app/_components/home/SelectedClients/_SelectedClients.module.scss
+++ b/app/_components/home/SelectedClients/_SelectedClients.module.scss
@@ -89,6 +89,10 @@
   .client:nth-child(n + 3) {
     border-top: 1px solid var(--rule);
   }
+  .intro {
+    font-size: 1.5rem;
+    line-height: 1.5;
+  }
 }
 
 @media (max-width: 640px) {
@@ -104,7 +108,7 @@
     font-size: 0.9rem;
   }
   .intro {
-    font-size: 1.45rem;
+    font-size: 1.4rem;
     margin-bottom: 24px;
   }
 }
