--- a/app/_components/home/Services/_Services.module.scss
+++ b/app/_components/home/Services/_Services.module.scss
@@ -84,6 +84,10 @@
   .service {
     min-height: 0;
   }
+  .desc {
+    font-size: 1.45rem;
+    line-height: 1.5;
+  }
 }
 
 @media (max-width: 640px) {
@@ -96,7 +100,7 @@
     font-size: 2.6rem;
   }
   .desc {
-    font-size: 1.45rem;
+    font-size: 1.4rem;
   }
   .tags span {
     font-size: 0.9rem;
